# morphogen

./: .gitignore  Cargo.toml  PROJECT_PROGRESSION.md  README.md
.github/workflows/: ci.yml
client/: index.html  package-lock.json  package.json  tsconfig.json
client/src/: camera.ts  disasters.ts  encyclopedia.ts  main.ts  noise.ts  phylotree.ts  renderer.ts  simulation.ts  species.ts  terrain.ts  timecontrol.ts  tools.ts  types.ts
server/: Cargo.toml
server/src/: main.rs
server/src/ecosystem/: animal.rs  decomposer.rs  genome.rs  mod.rs  organism.rs  plant.rs  spatial.rs  world.rs
server/src/terrain/: biome.rs  chunk.rs  erosion.rs  mod.rs  noise.rs  planet.rs
